2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch info for gconf-editor in
	2.1-core.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for evolution in
	2.1-extras.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for gcm in
	2.1-extras.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gcalctool to 2.1-extras.

2002-12-15  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Changed gnome-media branch to HEAD (2.1).

2002-12-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-cd-burner to 2.1-extras.

2002-12-11  Carlos Perelló Marín <carlos@gnome-db.org>

	* translation-status.xml: Removed libgda/libgnomedb/mergeant
	from the gnome 2.1 status and changed the gnome 2.0 branch to HEAD
	* ChangeLog: Recoded as UTF-8

2002-12-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-rpm to 2.1-extras.

2002-12-05  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* translation-status.xml: Fixed pot file name for ghex in
	2.1-fifth-toe.

2002-12-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for galeon in
	2.1-fifth-toe.

2002-12-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for libgnomeprint.

2002-12-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added scrollkeeper to 2.0-extras and
	2.1-extras as well.

2002-11-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added atk to 2.1-core. Fixed some
	strangeness in the page descriptions.

2002-11-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for glimmer. The GNOME-2-0
	branch has no po directory at all, so we better use HEAD.

2002-11-29  Christian Rose  <menthos@menthos.com>
