@@ -1675,6 +1675,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-pkgview">
+    <version release="gnome-2.1-extras">
+      <component name="gnome-pkgview" dir="gnome-pkgview">
+	<podir dir="po"/>
+	<potname name="gnome-pkgview.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-pm">
     <version release="gnome-1.4-extras">
       <component name="gnome-pm" dir="gnome-pm">
