@@ -1,3 +1,7 @@
+2002-12-26  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-pkgview to 2.1-extras.
+
 2002-12-22  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed branch info for gconf-editor in
